package com.example.springlibrary.service;

public class MyService {

    public String greet() {
        return "Hello from MyService!";
    }
}
