@startuml
skinparam class {
    BackgroundColor<<Controller>> #E1F5FE
    BackgroundColor<<Service>> #E8F5E9
    BackgroundColor<<Repository>> #FFF3E0
    BackgroundColor<<Entity>> #FFFDE7
    BackgroundColor<<Config>> #F3E5F5
    BackgroundColor<<AutoConfig>> #F3E5F5
    BorderColor Black
    ArrowColor Black
}

title Class Diagram

' ── rest-service module ──

package "com.example.workspace.api" <<rest-service>> {
  class SpringBootWorkspaceApplication {
    + {static} main(args : String[]) : void
  }
}

package "com.example.workspace.api.config" <<rest-service>> {
  class OpenApiConfig <<Config>> {
    + openAPI() : OpenAPI
  }
}

package "com.example.workspace.api.controller" <<rest-service>> {
  class GreetingController <<Controller>> {
    - greetingService : GreetingService
    - myService : MyService
    + create(name : String) : ResponseEntity<Greeting>
    + findById(id : Long) : ResponseEntity<Greeting>
    + findAll() : List<Greeting>
    + search(keyword : String) : List<Greeting>
    + greet() : String
  }
}

' ── library module ──

package "com.example.workspace.core.service" <<library>> {
  class GreetingService <<Service>> {
    - greetingRepository : GreetingRepository
    + create(name : String) : Greeting
    + findById(id : Long) : Optional<Greeting>
    + findAll() : List<Greeting>
    + search(keyword : String) : List<Greeting>
  }
}

package "com.example.workspace.core.repository" <<library>> {
  interface GreetingRepository <<Repository>> {
    + findByMessageContainingIgnoreCase(keyword : String) : List<Greeting>
  }
}

package "com.example.workspace.core.domain" <<library>> {
  class Greeting <<Entity>> {
    - id : Long
    - message : String
    - createdAt : Instant
    # Greeting()
    + Greeting(message : String)
    + getId() : Long
    + getMessage() : String
    + getCreatedAt() : Instant
  }
}

' ── spring-library module ──

package "com.example.springlibrary.config" <<spring-library>> {
  class MyAutoConfiguration <<AutoConfig>> {
    + myService() : MyService
  }
}

package "com.example.springlibrary.service" <<spring-library>> {
  class MyService <<Service>> {
    + greet() : String
  }
}

' ── Relationships ──
GreetingController --> GreetingService : uses
GreetingController --> MyService : uses
GreetingService --> GreetingRepository : uses
GreetingRepository ..> Greeting : manages
GreetingService ..> Greeting : returns
MyAutoConfiguration ..> MyService : creates
@enduml
